--- a/py_ds_ch03.ipynb
+++ b/py_ds_ch03.ipynb
@@ -2231,6 +2231,427 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### List, Set, and Dict Comprehensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filter out strings with length 2 or less and convert them to uppercase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strings = ['a', 'as', 'bat', 'car', 'dove', 'python']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['BAT', 'CAR', 'DOVE', 'PYTHON']"
+     },
+     "metadata": {},
+     "execution_count": 125
+    }
+   ],
+   "source": [
+    "[x.upper() for x in strings if len(x) > 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_lengths = {len(x) for x in strings}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{1, 2, 3, 4, 6}"
+     },
+     "metadata": {},
+     "execution_count": 127
+    }
+   ],
+   "source": [
+    "unique_lengths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{1, 2, 3, 4, 6}"
+     },
+     "metadata": {},
+     "execution_count": 132
+    }
+   ],
+   "source": [
+    "set(map(len, strings))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc_mapping = {val: index for index, val in enumerate(strings)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{'a': 0, 'as': 1, 'bat': 2, 'car': 3, 'dove': 4, 'python': 5}"
+     },
+     "metadata": {},
+     "execution_count": 134
+    }
+   ],
+   "source": [
+    "loc_mapping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Nested list comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_data = [['John', 'Emily', 'Micheal', 'Mary', 'Steven'], ['Maria', 'Juan', 'Javier', 'Natalia', 'Pilar']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names_of_interest = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = [name for names in all_data for name in names if name.count('e') >= 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['Steven']"
+     },
+     "metadata": {},
+     "execution_count": 140
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some_tuples = [(1, 2, 3), (4, 5, 6), (7, 8, 9)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flattened = [x for tup in some_tuples for x in tup]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+     },
+     "metadata": {},
+     "execution_count": 145
+    }
+   ],
+   "source": [
+    "flattened"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_function(x, y, z = 1.5):\n",
+    "    if z > 1:\n",
+    "        return z * (x + y)\n",
+    "    else:\n",
+    "        return z / (x + y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.06363636363636363"
+     },
+     "metadata": {},
+     "execution_count": 148
+    }
+   ],
+   "source": [
+    "my_function(5, 6, z = 0.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "35.49"
+     },
+     "metadata": {},
+     "execution_count": 149
+    }
+   ],
+   "source": [
+    "my_function(3.14, 7, 3.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "45.0"
+     },
+     "metadata": {},
+     "execution_count": 150
+    }
+   ],
+   "source": [
+    "my_function(10, 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Returning Muliple Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f():\n",
+    "    a = 5\n",
+    "    b = 6\n",
+    "    c = 7\n",
+    "    return a, b, c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "return_value = f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(5, 6, 7)"
+     },
+     "metadata": {},
+     "execution_count": 154
+    }
+   ],
+   "source": [
+    "return_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f():\n",
+    "    a = 5\n",
+    "    b = 6\n",
+    "    c = 7\n",
+    "    return {'a': a, 'b': b, 'c': c}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "return_value = f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{'a': 5, 'b': 6, 'c': 7}"
+     },
+     "metadata": {},
+     "execution_count": 157
+    }
+   ],
+   "source": [
+    "return_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Functions are objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "states = [' Alabama ', 'Georgia!', 'Georgia', 'georgia', 'FlOrIda', 'south carolina##', 'West virginia?']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_strings(strings):\n",
+    "    result = []\n",
+    "    for value in strings:\n",
+    "        value = value.strip()\n",
+    "        value = re.sub('[!#?]', '', value)\n",
+    "        value = value.title()\n",
+    "        result.append(value)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['Alabama',\n 'Georgia',\n 'Georgia',\n 'Georgia',\n 'Florida',\n 'South Carolina',\n 'West Virginia']"
+     },
+     "metadata": {},
+     "execution_count": 163
+    }
+   ],
+   "source": [
+    "clean_strings(states)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
