--- a/py_ds_ch04.ipynb
+++ b/py_ds_ch04.ipynb
@@ -3719,7 +3719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -3728,11 +3728,189 @@
       "text/plain": "75"
      },
      "metadata": {},
-     "execution_count": 298
+     "execution_count": 300
     }
    ],
    "source": [
     "(np.abs(walk) >= 10).argmax()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Simulating many random walks at once"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nwalks = 5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nsteps = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draws = np.random.randint(0, 2, size = (nwalks, nsteps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stpes = np.where(draws > 0 , 1, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "walks = stpes.cumsum(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[  1,   0,  -1, ...,  44,  45,  46],\n       [  1,   0,   1, ..., -48, -49, -50],\n       [  1,   2,   1, ...,  16,  15,  16],\n       ...,\n       [  1,   2,   1, ...,  12,  11,  10],\n       [  1,   2,   1, ...,  30,  29,  30],\n       [  1,   2,   3, ...,   2,   3,   2]], dtype=int32)"
+     },
+     "metadata": {},
+     "execution_count": 306
+    }
+   ],
+   "source": [
+    "walks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "114"
+     },
+     "metadata": {},
+     "execution_count": 307
+    }
+   ],
+   "source": [
+    "walks.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "-131"
+     },
+     "metadata": {},
+     "execution_count": 308
+    }
+   ],
+   "source": [
+    "walks.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hits30 = (np.abs(walks) >= 30).any(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([ True,  True,  True, ..., False,  True, False])"
+     },
+     "metadata": {},
+     "execution_count": 310
+    }
+   ],
+   "source": [
+    "hits30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "3398"
+     },
+     "metadata": {},
+     "execution_count": 312
+    }
+   ],
+   "source": [
+    "hits30.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crossing_times = (np.abs(walks[hits30]) >= 30).argmax(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "505.27486756915835"
+     },
+     "metadata": {},
+     "execution_count": 314
+    }
+   ],
+   "source": [
+    "crossing_times.mean()"
    ]
   },
   {
