--- a/py_ds_ch02.ipynb
+++ b/py_ds_ch02.ipynb
@@ -8,7 +8,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.6-final"
+   "version": "3.8.5"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -18,20 +18,22 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python37664bitvenvdsconda4a789d2020f344fcb5b98785fe6a46cd",
-   "display_name": "Python 3.7.6 64-bit ('venv_ds': conda)"
+   "name": "python385jvsc74a57bd028c247b499e448f71b41b854b0b42f60e2c2e62fc2d9cb50e66683dcbb7ca055",
+   "display_name": "Python 3.8.5 64-bit ('myenv': conda)"
   }
  },
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "%magic\n%hist\n"
+     "text": [
+      "%hist\n"
+     ]
     }
    ],
    "source": [
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
